<resources>
    <string name="app_name">MediGo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="onboard1_title">Book appoinment with Trusted Doctors</string>
    <string name="onboard1_desc">Browse through a list of certified medical professionals and schedule appointments at your convenience</string>
    <string name="onboard2_title">Consult Doctors from Anywhere</string>
    <string name="onboard2_desc">Have secure and private consultations with healthcare providers through our app, no matter where you are.</string>
    <string name="onboard3_title">Access and Manage Your Health Records</string>
    <string name="onboard3_desc">Keep track of your medical history and documents all in one place for easy access and sharing.</string>
    <string name="Get_Started"><![CDATA[Get Started]]></string>
    <string name="wel_msg">Access trusted online consultations, book appointments, and receive prescriptions—all from the comfort of your home.</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="signup_dont_have_acc">Don’t have an account? Sign Up</string>
    <string name="home_top_text">Take Care Of Your Health Needs Our Services</string>
    <string name="doctor_title">Doctors</string>
    <string name="info">Info</string>
    <string name="doc1_name">Prof. Mohamed Hussain Rezvi Sheriff</string>
    <string name="doc1_speci">Consultant Physician and Nephrologis</string>
    <string name="username">Amanda Thenuwuara</string>
    <string name="doc1_shor_name">Prof.Mohamed Huzain</string>
    <string name="add_review">Add Review</string>
    <string name="appointment_title">All Appointment</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="rebook">Rebook</string>
    <string name="schedule">Schedule</string>
    <string name="doc_info_tab">Doctor Info</string>
    <string name="review_tab">Review</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_num">Card Number</string>
    <string name="exp_date">Exp Date</string>
    <string name="cvv">CVV</string>
    <string name="save_card">Save Card</string>
    <string name="date">Month 24, 2025</string>
    <string name="time">4.30 PM</string>
    <string name="doc1_nick">Prof. Mohamed ...</string>
    <string name="price">LKR 5000</string>
    <string name="pay">Pay Now</string>
    <string name="f_name">Full Name</string>
    <string name="mnumber">Mobile Phone</string>
    <string name="dob">Date of Birth</string>
    <string name="details">Details</string>
    <string name="upd_prof">Update Profile</string>
    <string name="cate">Categories</string>
    <string name="hi_wel">Hi, WelcomeBack</string>
    <string name="your_appoinment">Your Appoiment</string>
    <string name="appoinment_date">13/02/2024</string>
    <string name="appoinment_tme">WED 5.00pm</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="age_value">26</string>
    <string name="gender_value">Female</string>
    <string name="problem">Problem</string>
    <string name="problem_dec">Patient experiencing persistent kidney pain and hypertension symptoms. Requires consultation for diagnosis and possible treatment options</string>
    <string name="doc2_name">Dr. Samith Silva</string>
    <string name="doc2_dec">Consultant Physician</string>
    <string name="doc3_name">Dr. Siva Chinnatamby</string>
    <string name="doc3_dec">Obstetrics and Gynaecology</string>
    <string name="doc4_name">Prof. Senaka Rajapaksha</string>
    <string name="doc4_dec">General (Internal) Medicine</string>
    <string name="doc5_name">Dr. Surani Udugama</string>
    <string name="doc5_dec">Consultant Microbiologist</string>
    <string name="are_you_sure">Are you sure you want to cancel this appointment?</string>
    <string name="are_you_sure_dec">This action cannot be undone. If you cancel, you may need to reschedule later.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sort_by">Sort by</string>
    <string name="doc_profile">Profile</string>
    <string name="doc_profile_dec">Professor Rezvi Sheriff is a renowned nephrologist who co-founded Sri Lanka\'s first kidney transplant program and dialysis unit. He has served as the Director of the Postgraduate Institute of Medicine and as a Senior Professor of Medicine at the University of Colombo.</string>
    <string name="doc_career_path">Career Path</string>
    <string name="doc_career_pah_dec">Professor Mohamed Hussain Rezvi Sheriff served as Senior Professor of Medicine at the University of Colombo and Director of PGIM. He co-founded Sri Lanka’s first kidney transplant program, established Western Infirmary Hospital, and was a Councilor for the International Society of Nephrology and SLMA President.</string>
    <string name="doc_highlits">Highlights</string>
    <string name="doc_highlite_dec">Under Professor Mohamed Hussain Rezvi Sheriff’s guidance, over 1,000 kidney transplants have been performed, making him a pioneer in nephrology in Sri Lanka. He is a Vidya Jyothi National Award recipient, has trained most nephrologists in Sri Lanka, and has published 200+ research papers in medical journals.\n\n\n\n\n\n</string>
    <string name="share_review">Share Your Feedback – Help Us Improve!</string>
    <string name="doc6_name">Dr. Ananda Wijewikrama</string>
    <string name="doc6_dec">Consultant Physician</string>
    <string name="home_doc">Doctors</string>
    <string name="home_fav">Favorite</string>
    <string name="forgot">Forget Password</string>
    <string name="profile">Profile</string>
    <string name="fav">Favorite</string>
    <string name="pay_method">Paymen Method</string>
    <string name="privacy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="thanks">Thank You!</string>
    <string name="pay_sucss">Your payment was successful.</string>
    <string name="pay_sucss_msg">You have successfully booked an appointment with</string>
    <string name="date_hr">Date/Hour</string>
    <string name="date_hr_value">Month 24, Year/ 4.30pm</string>
    <string name="duration">Duration</string>
    <string name="duration_value">30 Minutes</string>
    <string name="add_card">+ Add Your Card</string>
    <string name="log_msg">already have an account? Log in</string>
    <string name="terms">By continuing, you agree to   Terms of Use and Privacy Policy.</string>
    <string name="cancel_suc">Your appointment has been canceled successfully</string>
    <string name="cancel_msg">We hope to assist you in the future!</string>
    <string name="new_date">April 12, 2025</string>
    <string name="new_time">8.00am</string>
    <string name="gender_value1">Male</string>
    <string name="dec_problem">Describe your problem</string>
    <string name="patient_details">Patient Details</string>
    <string name="av_time">Available Time</string>
    <string name="booking">Booking for</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="change">change</string>
    <string name="card">CARD</string>
    <string name="contact_sup">Contact Supporter</string>

</resources>