<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:fontFamily="@font/league_spartan_semibold"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="309dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/f_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/recangle_new"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#767474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="309dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/recangle_new"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#767474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="309dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/mnumber"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/recangle_new"
        android:ems="10"
        android:inputType="phone"
        android:textColorHint="#767474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="309dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/recangle_new"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#767474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="309dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:background="@drawable/recangle_new"
        android:ems="10"
        android:inputType="date"
        android:textColorHint="#767474"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/league_spartan"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="#787777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView125" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/league_spartan"
        android:text="@string/log_msg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_lightblue"
        android:text="@string/add_card"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

</androidx.constraintlayout.widget.ConstraintLayout>